syntax = "proto3";

package engine.metadata;

option java_package = "com.engine.metadata";
option java_multiple_files = true;

// Request for fetching a single document's metadata
message MetadataRequest {
  string documentId = 1;
}

// Response with metadata details
message MetadataResponse {
  string documentId = 1;
  string title = 2;
  string author = 3;
  string createdAt = 4;
  map<string, string> extraFields = 5;
}

// Request for listing multiple metadata entries
message MetadataListRequest {
  int32 page = 1;
  int32 size = 2;
}

// Response for list of metadata
message MetadataListResponse {
  repeated MetadataResponse metadata = 1;
}

service MetadataService {
  // Fetch metadata for a single document
  rpc GetMetadata(MetadataRequest) returns (MetadataResponse);

  // Fetch paginated list of metadata
  rpc ListMetadata(MetadataListRequest) returns (MetadataListResponse);
}
